Fixed controls spacing.

--- a/src/assets/styles/control.css
+++ b/src/assets/styles/control.css
@@ -5,14 +5,6 @@
   as published by Sam Hocevar. See the COPYING file for more details.
 */
 
-@import './reset.css';
-
-@import './variables.css';
-@import './colors.css';
-
-@import './globals.css';
-@import './layout.css';
-
-@import './control.css';
-@import './ripple.css';
-@import './button.css';
+.ciu-control {
+  margin-bottom: var(--ciu-spacing);
+}
